[gd_scene load_steps=16 format=3 uid="uid://b3q7epvwgd3ds"]

[ext_resource type="Script" path="res://environments/TurtlePusher/turtle_pusher_env.gd" id="1_dfue6"]
[ext_resource type="PackedScene" uid="uid://b0qa13qbnlo0i" path="res://project_scenes/actors/turtlebot.tscn" id="1_qbq3d"]
[ext_resource type="Resource" uid="uid://bcjq6bvv58jbs" path="res://environments/TurtlePusher/default_tb_pusher.tres" id="2_rsjuf"]
[ext_resource type="Script" path="res://environments/TurtlePusher/tb_push_ai_controller.gd" id="3_71ibg"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sensors/sensors_3d/RaycastSensor3D.gd" id="5_3oubp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_opbsr"]
albedo_color = Color(0.60933, 0.60933, 0.60933, 1)

[sub_resource type="BoxMesh" id="BoxMesh_npouk"]
material = SubResource("StandardMaterial3D_opbsr")
size = Vector3(3, 0.3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_tq0va"]
size = Vector3(3, 0.3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_vfb5q"]
size = Vector3(0.05, 0.05, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s7nlj"]
transparency = 1
albedo_color = Color(0, 1, 1, 0.498039)

[sub_resource type="CylinderMesh" id="CylinderMesh_a1cq7"]
material = SubResource("StandardMaterial3D_s7nlj")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pa1iv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_asym3"]
albedo_color = Color(6.01634e-07, 0.610609, 9.62615e-07, 1)

[sub_resource type="SphereMesh" id="SphereMesh_i67q8"]
material = SubResource("StandardMaterial3D_asym3")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_o46am"]
radius = 0.1

[node name="TurtlePusherEnv" type="Node3D" node_paths=PackedStringArray("turtle", "tb_ai_controller", "ball", "target")]
script = ExtResource("1_dfue6")
settings = ExtResource("2_rsjuf")
turtle = NodePath("Turtlebot")
tb_ai_controller = NodePath("Turtlebot/TB_PushAIController")
ball = NodePath("Ball")
target = NodePath("TargetArea")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_npouk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_tq0va")

[node name="Turtlebot" parent="." instance=ExtResource("1_qbq3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.137214, 0, -0.568905)

[node name="TB_PushAIController" type="Node3D" parent="Turtlebot" node_paths=PackedStringArray("info_label", "raycast_sens")]
script = ExtResource("3_71ibg")
info_label = NodePath("../../InfoLabel")
raycast_sens = NodePath("../RayCastSensor3D")
reset_after = 5000

[node name="Area3D" type="Area3D" parent="Turtlebot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0582185, -0.114774)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Turtlebot/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0350365)
shape = SubResource("BoxShape3D_vfb5q")

[node name="RayCastSensor3D" type="Node3D" parent="Turtlebot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.090531, 0)
script = ExtResource("5_3oubp")
collision_mask = 5
boolean_class_mask = 4
n_rays_width = 15.0
n_rays_height = 1.0
ray_length = 4.0
collide_with_areas = true
class_sensor = true

[node name="@RayCast3D@30760" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-1.87789, 0, 3.53179)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30761" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-1.62695, 0, 3.65418)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30762" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-1.36808, 0, 3.75877)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30763" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-1.10255, 0, 3.84505)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30764" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-0.831647, 0, 3.91259)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30765" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-0.556692, 0, 3.96107)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30766" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(-0.279026, 0, 3.99026)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30767" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(0, 0, 4)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30768" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(0.279026, 0, 3.99026)
collision_mask = 5
collide_with_areas = true

[node name="@RayCast3D@30769" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(0.556692, 0, 3.96107)
collision_mask = 5
collide_with_areas = true

[node name="node_10 0" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(0.831647, 0, 3.91259)
collision_mask = 5
collide_with_areas = true

[node name="node_11 0" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(1.10255, 0, 3.84505)
collision_mask = 5
collide_with_areas = true

[node name="node_12 0" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(1.36808, 0, 3.75877)
collision_mask = 5
collide_with_areas = true

[node name="node_13 0" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(1.62695, 0, 3.65418)
collision_mask = 5
collide_with_areas = true

[node name="node_14 0" type="RayCast3D" parent="Turtlebot/RayCastSensor3D"]
target_position = Vector3(1.87789, 0, 3.53179)
collision_mask = 5
collide_with_areas = true

[node name="TargetArea" type="Area3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.645653, -2.38419e-07, 0.178553)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TargetArea"]
mesh = SubResource("CylinderMesh_a1cq7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetArea"]
shape = SubResource("CylinderShape3D_pa1iv")

[node name="Ball" type="RigidBody3D" parent="." groups=["Ball"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.368161, 0.0999999, -0.302226)
collision_layer = 5

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ball"]
mesh = SubResource("SphereMesh_i67q8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
shape = SubResource("SphereShape3D_o46am")

[node name="InfoLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.05, 1.5)

[connection signal="body_entered" from="Turtlebot/Area3D" to="Turtlebot/TB_PushAIController" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Turtlebot/Area3D" to="Turtlebot/TB_PushAIController" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="TargetArea" to="." method="_on_target_area_body_entered"]
